all done but task is only for the user and in user list there is no no individual list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="content_description_search" />
     <string name="content_description_more" />
     <string name="qggqecug">qggqecug</string>
+    <string name="save">SAVE</string>
+    <string name="write_the_task">write the task</string>
 </resources>
